--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@prisma/adapter-pg": "^7.1.0",
+    "@radix-ui/react-accordion": "^1.2.12",
     "@reduxjs/toolkit": "^2.8.2",
-    "@upstash/ratelimit": "github:upstash/ratelimit",
+    "@upstash/ratelimit": "^1.1.4",
     "@upstash/redis": "^1.35.8",
     "bcryptjs": "^3.0.3",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "html-react-parser": "^5.2.6",
@@ -28,7 +30,7 @@
     "react-redux": "^9.2.0",
     "react-toastify": "^10.0.6",
     "swiper": "^11.2.10",
-    "tailwind-merge": "^3.3.1",
+    "tailwind-merge": "^3.4.0",
     "zod": "^4.1.13"
   },
   "devDependencies": {
@@ -43,6 +45,7 @@
     "eslint-config-next": "15.4.1",
     "prisma": "^7.1.0",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
