added user account page

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@prisma/adapter-pg": "^7.1.0",
     "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@reduxjs/toolkit": "^2.8.2",
     "@upstash/ratelimit": "^1.1.4",
     "@upstash/redis": "^1.35.8",
