--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@reduxjs/toolkit": "^2.8.2",
+    "@stripe/react-stripe-js": "^5.4.1",
+    "@stripe/stripe-js": "^8.6.0",
     "@upstash/ratelimit": "^1.1.4",
     "@upstash/redis": "^1.35.8",
     "bcryptjs": "^3.0.3",
@@ -30,6 +32,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-toastify": "^10.0.6",
+    "stripe": "^20.1.0",
     "swiper": "^11.2.10",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.1.13"
