--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
+    "framer-motion": "^11.18.2",
     "html-react-parser": "^5.2.6",
     "lucide-react": "^0.525.0",
     "next": "^16.0.10",
